--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Upperline Code</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,28 +19,28 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Upperline Code</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Our Programs</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
+									<li><a href="left-sidebar.html">Intro to Software Engineering</a></li>
+									<li><a href="right-sidebar.html">Advanced Software Engineering</a></li>
+									<li><a href="no-sidebar.html">Web Design A</a></li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
+							<li>
+								<a href="#">Locations</a>
+									<ul>
+										<li><a href="#">New York City</a></li>
+										<li><a href="#">Miami</a></li>
+										<li><a href="#">Los Angeles</a></li>
+										<li><a href="#">Chicago</a></li>
+									</ul>
+							</li>
+							<li><a href="elements.html">Become a Partner</a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
@@ -50,9 +50,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>Upperline Code</h2>
+							<p>Summer Coding Programs<br />
+							 for High School Students</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -72,18 +72,18 @@
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>
+										Upperline Code teaches high school students how to turn their ideas into reality using the power of code.  We arm students with the skills to thrive in a digital economy while working in a collaborative and dynamic environment. Our immersive summer programs teach students how to build Web Applications using languages such as HTML, CSS, Ruby, and Javascript.
+										</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									
+									<p>Our Values<br>
+										Support: Create an environment where you’re able to step outside your comfort zone and know that there’s a safety net.<br>
+										Build what you love: You're most motivated to code when you believe in what you're building.<br>
+										Have fun: Learning to code is hard - we also make it a ton of fun</br>
+										Self-Reliance: Develop problem solving skills.
+									</p>
 								</div>
 							</div>
 						</div>
