--- a/index.html
+++ b/index.html
@@ -67,22 +67,19 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Passionate Teachers.</h2>
+										<h2>Rigorous Curriculum.</h2>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
 									<p>
-										Upperline Code teaches high school students how to turn their ideas into reality using the power of code.  We arm students with the skills to thrive in a digital economy while working in a collaborative and dynamic environment. Our immersive summer programs teach students how to build Web Applications using languages such as HTML, CSS, Ruby, and Javascript.
+										Upperline Code teaches high school students how to turn their ideas into reality using the power of code.  We arm students with the skills to thrive in a digital economy while working in a collaborative and dynamic environment.
 										</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
 									
-									<p>Our Values<br>
-										Support: Create an environment where you’re able to step outside your comfort zone and know that there’s a safety net.<br>
-										Build what you love: You're most motivated to code when you believe in what you're building.<br>
-										Have fun: Learning to code is hard - we also make it a ton of fun</br>
-										Self-Reliance: Develop problem solving skills.
+									<p>
+										Our immersive summer programs teach students how to build Web Applications using languages such as HTML, CSS, Ruby, and Javascript. Courses are two weeks long and give students a powerful foundation to create applications that matter to them
 									</p>
 								</div>
 							</div>
