--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/pic02.jpeg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -173,13 +173,13 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Sign Up for More Information</h2>
+							<p>Our Summer 2016 Schedule will be posted soon.</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
 								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Sign Up" class="fit special" /></div>
 							</div>
 						</form>
 					</div>
