--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 							<li>
 								<a href="#">Our Programs</a>
 								<ul>
-									<li><a href="left-sidebar.html">Intro to Software Engineering</a></li>
-									<li><a href="right-sidebar.html">Advanced Software Engineering</a></li>
-									<li><a href="no-sidebar.html">Web Design A</a></li>
+									<li><a href="#">Intro to Software Engineering</a></li>
+									<li><a href="#">Advanced Software Engineering</a></li>
+									<li><a href="#">Intro to Web Design</a></li>
 								</ul>
 							</li>
 							<li>
@@ -40,7 +40,7 @@
 										<li><a href="#">Chicago</a></li>
 									</ul>
 							</li>
-							<li><a href="elements.html">Become a Partner</a></li>
+							<li><a href="#">Become a Partner</a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
