--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									</ul>
 							</li>
 							<li><a href="#">Become a Partner</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="#signup" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -90,6 +90,7 @@
 
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade">
+					<a name="signup">
 					<div class="container">
 						<header>
 							<h2>Sign Up for More Information</h2>
