--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<h2>Sign Up for More Information</h2>
 							<p>Our Summer 2016 Schedule will be posted soon.</p>
 						</header>
-						<form method="post" action="#" class="container 50%">
+						<form method="post" action="MAILTO:info@upperlinecode.com" class="container 50%">
 							<div class="row uniform 50%">
 								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
 								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Sign Up" class="fit special" /></div>
