--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Passionate Teachers.</h2>
-										<h2>Rigorous Curriculum.</h2>
+										<h2>Passionate Teachers, Rigorous Curriculum.</h2>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
@@ -110,7 +109,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/upperlinecode" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/upperlinecode" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/company/upperline-code" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.instagram.com/upperlinecode/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/upperlinecode" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto:info@upperlinecode.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
