--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/custom.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -96,9 +97,11 @@
 							<h2>Sign Up for More Information</h2>
 							<p>Our Summer 2016 Schedule will be posted soon.</p>
 						</header>
-						<form method="post" action="" class="container 50%">
+						<form method="post" action="https://docs.google.com/a/upperlinecode.com/forms/d/1jD6m5lQVxcjDqXmU9vrwDmmajuOq6Bs9HytYs-Z1tmQ/formResponse" class="container 50%">
 							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
+								<div class="8u 12u$(xsmall)">
+									<input class="whiteinput" type="email" name="entry.759984358" id="entry_759984358" placeholder="Your Email Address" />
+								</div>
 								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Sign Up" class="fit special" /></div>
 							</div>
 						</form>
