--- a/index.html
+++ b/index.html
@@ -97,14 +97,15 @@
 							<h2>Sign Up for More Information</h2>
 							<p>Our Summer 2016 Schedule will be posted soon.</p>
 						</header>
-						<form method="post" action="https://docs.google.com/a/upperlinecode.com/forms/d/1jD6m5lQVxcjDqXmU9vrwDmmajuOq6Bs9HytYs-Z1tmQ/formResponse" class="container 50%">
-							<div class="row uniform 50%">
+					<!-- 	"https://docs.google.com/a/upperlinecode.com/forms/d/1jD6m5lQVxcjDqXmU9vrwDmmajuOq6Bs9HytYs-Z1tmQ/formResponse" -->
+						<div class="signupcontainer container 50%">
+							<div class="row formcontainer uniform 50%">
 								<div class="8u 12u$(xsmall)">
-									<input class="whiteinput" type="email" name="entry.759984358" id="entry_759984358" placeholder="Your Email Address" />
+									<input class="email-input" type="email" name="entry.759984358" id="entry_759984358" placeholder="Your Email Address" />
 								</div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Sign Up" class="fit special" /></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Sign Up" class="fit special" id="formsubmit" /></div>
 							</div>
-						</form>
+						</div>
 					</div>
 				</section>
 
